--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,3 @@
-This version of the app does a better job adjust large font sizes for little phone screens — if you use iOS’s dynamic type settings, you won’t see any more comically large text.
+Копируйте номера отслеживания Внимательно следить за доставкой стало еще проще — даже не нужно заходить в приложение. Перейдите на страницу "Информация о заказе" > "Отслеживание посылки" > "Дополнительно". Там можно копировать номера отслеживания и использовать их в любых сторонних сервисах.
+
+Сообщения об ошибке больше не будет! Если на вашем сайте нет модуля статистики Jetpack или у вас нет разрешения на доступ к таким данным, у вас просто не будет отображаться страница статистики. Мы убрали сообщение об ошибке, так что можете про него забыть.
