--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,3 @@
-This version of the app does a better job adjust large font sizes for little phone screens — if you use iOS’s dynamic type settings, you won’t see any more comically large text.
+Kopiere Sendungsverfolgungsnummern! Es ist jetzt noch einfacher, deine Bestellung zu verfolgen, ohne dafür die App öffnen zu müssen. Unter Auftragsdetails > Sendungsverfolgung > Mehr gibt es eine neue Aktion zum Kopieren deiner Sendungsverfolgungsnummer.
+
+Keine Fehlermeldungen mehr bei Statistiken! Wenn deine Website nicht über das Jetpack-Modul für Website-Statistiken verfügt oder du keine Berechtigung zum Anzeigen von Statistiken hast, siehst du die Statistikseite ganz einfach nicht. Du erhältst keine nervigen Fehlermeldungen mehr.
