--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,1 +1,3 @@
-This version of the app does a better job adjust large font sizes for little phone screens — if you use iOS’s dynamic type settings, you won’t see any more comically large text.
+Kopiera spårningsnummer! Det är nu enklare att hålla koll på din leverans utan att öppna appen. I Beställningsinformation > Leveransspårning > Mer finns det en ny åtgärd för att kopiera ditt spårningsnummer att använda närhelst du vill.
+
+Hejdå statistikfelmeddelandet! Om din webbplats inte har Jetpack-modulen webbplatsstatistik eller om du inte har behörighet att visa statistik så kommer du inte se statistiksidan. Du behöver inte se ett irriterande felmeddelande så vi har tagit bort det.
