--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,1 +1,3 @@
-This version of the app does a better job adjust large font sizes for little phone screens — if you use iOS’s dynamic type settings, you won’t see any more comically large text.
+复制跟踪编号！现在，不必打开应用程序即可更轻松地关注您的发货情况。在“订单详细信息”>“运输追踪”>“更多”中，提供了一项新操作，可用来复制您的跟踪编号，以便您根据需要进行使用。
+
+告别统计错误消息！如果您的站点没有 Jetpack 站点统计数据模块，或者您没有查看统计数据的权限，那么您将无法看到统计数据页面。您无需看到讨厌的错误消息，所以我们已经将其删除。
