Updated release notes from editorial

--- a/WooCommerce/Resources/release_notes.txt
+++ b/WooCommerce/Resources/release_notes.txt
@@ -1,3 +1,3 @@
-- The tab formerly known as Notifications is now Reviews. As notifications are now shown under Orders, the Notifications tab was in need of a new identity. We have cunningly renamed it ‘Reviews,’ as it now just shows reviews.
-- We have fixed a bug where pulling down to refresh on the Order Details screen resulted in weird UI with misplaced labels.
-- A badge is now displayed in the bottom tab, overlapping the Orders icon, to indicate the number of orders processing.
+- Notifications are shown under “Orders,” so the “Notifications” tab was in need of a new identity. Since it actually just displays reviews, we’ve cunningly renamed it “Reviews.”
+- There was a bug in the Order Details screen that created a weird UI with misplaced labels when you tried to refresh the information, and now there is not a bug there.
+- There’s now a badge in the bottom tab, overlapping the “Orders” icon, so you can quickly see the number of orders you have in process.
