--- a/WooCommerce/Resources/AppStoreStrings.pot
+++ b/WooCommerce/Resources/AppStoreStrings.pot
@@ -47,11 +47,11 @@ msgctxt "app_store_promo_text"
 msgid "Run your store wherever you are. The WooCommerce app makes it easy to manage orders and inventory, track sales, and monitor store activity like new orders and reviews."
 msgstr ""
 
-msgctxt "v2.4-whats-new"
+msgctxt "v2.5-whats-new"
 msgid ""
-"Copy tracking numbers! It is now easier to keep a watchful eye on your shipment without opening the app. In Order Details > Shipment Tracking > More, there is a new action to copy your tracking number to use wherever you want.\n"
-"\n"
-"Goodbye stats error message! If your site does not have the Jetpack site stats module, or you don’t have permission to view stats, you simply won’t see the stats page. You don’t need to see an annoying error message, so we have taken it away.\n"
+"- Notifications are shown under “Orders,” so the “Notifications” tab was in need of a new identity. Since it actually just displays reviews, we’ve cunningly renamed it “Reviews.”\n"
+"- There was a bug in the Order Details screen that created a weird UI with misplaced labels when you tried to refresh the information, and now there is not a bug there.\n"
+"- There’s now a badge in the bottom tab, overlapping the “Orders” icon, so you can quickly see the number of orders you have in process.\n"
 msgstr ""
 
 #. translators: This is a promo message that will be attached on top of a screenshot in the App Store.
