--- a/WooCommerce/Resources/ja.lproj/Localizable.strings
+++ b/WooCommerce/Resources/ja.lproj/Localizable.strings
@@ -1,10 +1,13 @@
-/* Translation-Revision-Date: 2019-06-27 06:54:03+0000 */
+/* Translation-Revision-Date: 2019-08-22 00:54:03+0000 */
 /* Plural-Forms: nplurals=1; plural=0; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: ja_JP */
 
 /* No comment provided by engineer. */
 "(no title)" = "(タイトルなし)";
+
+/* Content of the badge presented over the Orders icon when there are more than 9 orders processing */
+"9+" = "9+";
 
 /* An error message. */
 "A valid email address is needed to mail an authentication link. Please return to the previous screen and provide a valid email address." = "認証リンクをメールで送信するには、有効なメールアドレスが必要です。前の画面に戻り、有効なメールアドレスを入力してください。";
@@ -179,7 +182,7 @@
 "Copy" = "コピー";
 
 /* Copy tracking number button title */
-"Copy Tracking Number" = "Copy Tracking Number";
+"Copy Tracking Number" = "追跡番号をコピー";
 
 /* Message shown when site purchases API failed */
 "Could not check site purchases." = "サイトで購入した内容を確認できませんでした。";
@@ -265,7 +268,7 @@
 "Dotcom Missing Token" = "Dotcom トークンがありません";
 
 /* WordPress.com error thrown when the user has no permission to view site stats. */
-"Dotcom No Stats Permission" = "Dotcom No Stats Permission";
+"Dotcom No Stats Permission" = "Dotcom 統計情報の権限がありません";
 
 /* WordPress.com Request Failure */
 "Dotcom Request Failed" = "Dotcom のリクエストに失敗しました";
@@ -274,7 +277,7 @@
 "Dotcom Response Empty" = "Dotcom のレスポンスがありません";
 
 /* WordPress.com error thrown when the Jetpack site stats module is disabled. */
-"Dotcom Stats Module Disabled" = "Dotcom Stats Module Disabled";
+"Dotcom Stats Module Disabled" = "Dotcom 統計モジュールが無効です";
 
 /* WordPress.com Invalid Token */
 "Dotcom Token Invalid" = "Dotcom トークンが無効です";
@@ -346,14 +349,8 @@
 /* Navigates to the feature request screen */
 "Feature Request" = "機能のリクエスト";
 
-/* Accessibility label for the Filter notifications button. */
-"Filter notifications" = "通知をフィルター";
-
 /* Filter the orders list. */
 "Filter orders" = "注文を絞り込み";
-
-/* VoiceOver accessibility hint, informing the user the button can be used to filter the notifications list. */
-"Filters the notifications list by notification type." = "種類によって通知一覧をフィルターします。";
 
 /* VoiceOver accessibility hint, informing the user the button can be used to filter the order list. */
 "Filters the order list by payment status." = "支払いステータスで注文リストを絞り込みます。";
@@ -501,7 +498,7 @@
 "Lost your password?" = "パスワードをお忘れですか ?";
 
 /* It reads 'Made with love by Automattic. We’re hiring!'. Place \'We’re hiring!' between `<a>` and `</a>` */
-"Made with love by Automattic. <a href=\"https:\/\/automattic.com\/work-with-us\/\">We’re hiring!<\/a>" = "Made with love by Automattic. <a href=\"https:\/\/automattic.com\/work-with-us\/\">We’re hiring!<\/a>";
+"Made with love by Automattic. <a href=\"https:\/\/automattic.com\/work-with-us\/\">We’re hiring!<\/a>" = "Automattic が思いを込めて作りました。<a href=\"https:\/\/automattic.com\/work-with-us\/\">社員を募集中です。<\/a>";
 
 /* Login Prologue Legend */
 "Manage orders, track sales and monitor store activity with real-time alerts." = "注文を管理し、売り上げをトラッキングし、ストアのアクティビティをリアルタイムのアラートでモニターします。";
@@ -574,11 +571,11 @@
    Title of a button. The text should be capitalized. */
 "Next" = "次へ";
 
-/* Empty Notifications List Message */
-"No Notifications Yet!" = "まだ通知はありません。";
-
 /* Search Orders (Empty State) */
 "No Orders found" = "注文が見つかりません";
+
+/* Empty Reviews List Message */
+"No Reviews Yet!" = "まだレビューがありません。";
 
 /* Default text for Top Performers section when no data exists for a given period. */
 "No activity this period" = "この期間のアクティビティはありません";
@@ -590,8 +587,7 @@
 /* Text displayed when no data is available for revenue chart. */
 "No data available" = "使用可能なデータがありません";
 
-/* Notifications List (Empty State + Filters)
-   Orders List (Empty State + Filters) */
+/* Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "選択した基準と一致する結果はありません";
 
 /* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
@@ -603,13 +599,6 @@
 /* Labels an order note to let user know it's visible to the customer
    Spoken accessibility label for an icon image that indicates it's a note to the customer. */
 "Note to customer" = "お客様への通知";
-
-/* Title of the Notifications tab — plural form of Notification
-   Title that appears on top of the main Notifications screen when there is no filter applied to the list (plural form of the word Notification). */
-"Notifications" = "通知";
-
-/* Title that appears on top of the Notifications screen when a filter is applied. It reads: Notifications: {name of filter} */
-"Notifications: %@" = "通知:%@";
 
 /* Label prefix. Example: 'Number of files: 2' */
 "Number of files:" = "ファイル数 :";
@@ -694,7 +683,7 @@
 "Payment" = "決済";
 
 /* Payment of <currency symbol><payment total> received via (payment method title) */
-"Payment of (subject.totalValue) received via (order.paymentMethodTitle)" = "Payment of (subject.totalValue) received via (order.paymentMethodTitle)";
+"Payment of (subject.totalValue) received via (order.paymentMethodTitle)" = "(subject.totalValue) の支払いを (order.paymentMethodTitle) から受領しました";
 
 /* Payment of <currency symbol><payment total> received via (payment method title) */
 "Payment of (totalValue) received via (order.paymentMethodTitle)" = "Payment of (totalValue) received via (order.paymentMethodTitle)";
@@ -805,8 +794,7 @@
 /* A descriptive label prefix. Example: 'Regular price: $20.00' */
 "Regular price:" = "標準価格 :";
 
-/* Action: Opens the Store in a browser
-   Action: removes the current filters from the notifications list */
+/* Action: Opens the Store in a browser */
 "Remove Filters" = "フィルターを削除";
 
 /* Settings > Privacy Settings > report crashes section. Label for the `Report Crashes` toggle. */
@@ -832,7 +820,7 @@
 "Review, prepare, and ship these pending orders" = "保留中の注文を確認して準備し、配送してください";
 
 /* Name of the Reviews filter on the Notifications screen - it means only review notifications will be displayed. Plural form of the word Review.
-   Reviews descriptive label */
+   Reviews descriptive label - Title of the Reviews tab — plural form of Review - Title that appears on top of the main Reviews screen (plural form of the word Review). */
 "Reviews" = "レビュー";
 
 /* A descriptive title for the SKU cell in Product Details > Inventory, for Grouped products. */
@@ -1174,7 +1162,7 @@
 "Unable to change status of order #(orderID)" = "注文 #(orderID) のステータスを変更できません";
 
 /* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
-"Unable to delete tracking for order #(order.orderID)" = "Unable to delete tracking for order #(order.orderID)";
+"Unable to delete tracking for order #(order.orderID)" = "注文番号 (order.orderID) を削除できません";
 
 /* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
 "Unable to delete tracking for order #(orderID)" = "注文番号 (orderID) を削除できません";
