--- a/WooCommerce/Resources/zh-Hans.lproj/Localizable.strings
+++ b/WooCommerce/Resources/zh-Hans.lproj/Localizable.strings
@@ -1,10 +1,13 @@
-/* Translation-Revision-Date: 2019-08-07 02:54:03+0000 */
+/* Translation-Revision-Date: 2019-08-20 02:54:04+0000 */
 /* Plural-Forms: nplurals=1; plural=0; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: zh_CN */
 
 /* No comment provided by engineer. */
 "(no title)" = "(无标题)";
+
+/* Content of the badge presented over the Orders icon when there are more than 9 orders processing */
+"9+" = "超过 9 个";
 
 /* An error message. */
 "A valid email address is needed to mail an authentication link. Please return to the previous screen and provide a valid email address." = "必须提供有效电子邮件地址才能发送身份验证链接。请返回上一屏幕并提供有效电子邮件地址。";
@@ -346,14 +349,8 @@
 /* Navigates to the feature request screen */
 "Feature Request" = "功能请求";
 
-/* Accessibility label for the Filter notifications button. */
-"Filter notifications" = "筛选通知";
-
 /* Filter the orders list. */
 "Filter orders" = "过滤订单";
-
-/* VoiceOver accessibility hint, informing the user the button can be used to filter the notifications list. */
-"Filters the notifications list by notification type." = "按照通知类型筛选通知。";
 
 /* VoiceOver accessibility hint, informing the user the button can be used to filter the order list. */
 "Filters the order list by payment status." = "按付款状态过滤订单列表。";
@@ -574,11 +571,11 @@
    Title of a button. The text should be capitalized. */
 "Next" = "下一步";
 
-/* Empty Notifications List Message */
-"No Notifications Yet!" = "尚无通知！";
-
 /* Search Orders (Empty State) */
 "No Orders found" = "未找到任何订单";
+
+/* Empty Reviews List Message */
+"No Reviews Yet!" = "尚无评论！";
 
 /* Default text for Top Performers section when no data exists for a given period. */
 "No activity this period" = "这段时间内没有任何活动";
@@ -590,8 +587,7 @@
 /* Text displayed when no data is available for revenue chart. */
 "No data available" = "无可用数据";
 
-/* Notifications List (Empty State + Filters)
-   Orders List (Empty State + Filters) */
+/* Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "没有符合所选条件的结果";
 
 /* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
@@ -603,13 +599,6 @@
 /* Labels an order note to let user know it's visible to the customer
    Spoken accessibility label for an icon image that indicates it's a note to the customer. */
 "Note to customer" = "给客户的备注";
-
-/* Title of the Notifications tab — plural form of Notification
-   Title that appears on top of the main Notifications screen when there is no filter applied to the list (plural form of the word Notification). */
-"Notifications" = "Notifications";
-
-/* Title that appears on top of the Notifications screen when a filter is applied. It reads: Notifications: {name of filter} */
-"Notifications: %@" = "通知：%@";
 
 /* Label prefix. Example: 'Number of files: 2' */
 "Number of files:" = "文件数：";
@@ -805,8 +794,7 @@
 /* A descriptive label prefix. Example: 'Regular price: $20.00' */
 "Regular price:" = "正常价格：";
 
-/* Action: Opens the Store in a browser
-   Action: removes the current filters from the notifications list */
+/* Action: Opens the Store in a browser */
 "Remove Filters" = "删除过滤器";
 
 /* Settings > Privacy Settings > report crashes section. Label for the `Report Crashes` toggle. */
@@ -832,7 +820,7 @@
 "Review, prepare, and ship these pending orders" = "审核、准备和配送这些待处理订单";
 
 /* Name of the Reviews filter on the Notifications screen - it means only review notifications will be displayed. Plural form of the word Review.
-   Reviews descriptive label */
+   Reviews descriptive label - Title of the Reviews tab — plural form of Review - Title that appears on top of the main Reviews screen (plural form of the word Review). */
 "Reviews" = "评论";
 
 /* A descriptive title for the SKU cell in Product Details > Inventory, for Grouped products. */
